<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:parentTag="com.zk.android.app.presentation.transfer.widget.FromWalletView">

    <TextView
        android:id="@+id/label_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bridge_from"
        android:textAppearance="@style/Text"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/network_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/network_name" />

    <TextView
        android:id="@+id/network_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/bg_gray_overlay"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/network_ethereum"
        android:textAppearance="@style/Text"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/label_from" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/amount"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:background="@null"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/currency_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/network_name" />

    <ImageView
        android:id="@+id/currency_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:src="@drawable/ic_ethereum"
        app:layout_constraintBottom_toBottomOf="@id/currency_name"
        app:layout_constraintEnd_toStartOf="@id/currency_name"
        app:layout_constraintTop_toTopOf="@id/currency_name" />

    <TextView
        android:id="@+id/currency_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gray_overlay"
        android:paddingHorizontal="10dp"
        android:paddingVertical="6dp"
        android:text="@string/coin_eth"
        android:textAppearance="@style/Text.Button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/amount" />
</merge>